# attr_alias

./: COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml
src/: aliases.rs  attr-aliases.txt  lib.rs
tests/: crates.rs
tests/crates/complex/: Cargo.toml
tests/crates/complex/src/: attr-aliases.txt  main.rs
tests/crates/dependency/: Cargo.toml
tests/crates/dependency/src/: attr-aliases.txt  lib.rs  print.rs
tests/crates/dependent/: Cargo.toml
tests/crates/dependent/src/: main.rs
