[package]
name = "attr_alias"
version = "0.1.5"
authors = ["dylni"]
edition = "2021"
rust-version = "1.70.0"
description = """
Reduce attribute repetition with aliases
"""
readme = "README.md"
repository = "https://github.com/dylni/attr_alias"
license = "MIT OR Apache-2.0"
keywords = ["aliases", "attribute", "cfg", "compile", "macro"]
categories = ["development-tools::build-utils", "no-std::no-alloc", "rust-patterns"]
exclude = [".*", "tests.rs", "/rustfmt.toml", "/src/bin", "/src/sys", "/tests"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "attr_alias_docs_rs"]
rustdoc-args = ["--cfg", "attr_alias_docs_rs"]

[lib]
proc-macro = true

[features]
nightly = []
